v 0.0.5 : hauteur brand tile sur all brands + gestion overflow hidden + fix du allCars

--- a/js/pages/allBrands/allBrands.style.css
+++ b/js/pages/allBrands/allBrands.style.css
@@ -20,7 +20,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10%;
+    min-height: 10%;
     border-bottom: 1px solid var(--primary);
     padding: 0;
 }
